# egnitely-client

./: Cargo.toml  README.md
rust/: Cargo.toml  README.md
rust/src/: context.rs  errors.rs  lib.rs
src/: lib.rs
