[package]
name = "egnitely_client"
version = "0.1.2"
description = "Client library of Egnitely which contains helpers to build functions"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://egnitely.com/"
repository = "https://github.com/egnitely/egnitely-client/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.125"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = {version = "1.18.2", features = ["full"]}